2013-06-11  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/openvassd.c (scanner_thread): Skip username/password part of OTP.
	Patch by Jan-Oliver Wagner.

2013-05-31  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/users.c (check_user): The file name is static, so
	don't use a variable anymore.

	* src/auth.c (auth_check_user): Ignore username and password,
	only dname is of interest. Therfore simplify code.

2013-05-31  Michael Wiegand <michael.wiegand@greenbone.net>

	Mark results of code analysis based on a number of valgrind runs.

	* src/pluginlaunch.c (process_internal_msg): Add TODO regarding
	possible memleak.

	* src/pluginscheduler.c (plugins_scheduler_init): Add TODO regarding
	possible memleak.

2013-05-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/users.c (check_user): Remove any handling of the user name,
	it isn't required anyway. Removed the parameter "user".

	* src/users.h: Removed now unused macro OPENVAS_MAX_USERNAME_LEN.
	Adjusted proto accordingly.

	* src/auth.c (auth_check_user): Adjust call of check_user.

2013-05-29  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-nvt-sync.in: Add support for determining if the
	installed feed is current and only sync feed when it is not. Note that
	this only works with rsync.

2013-05-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/openvassd.8.in: Remove now-outdated parts about organization
	of users directory.

2013-05-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/hosts.c: Removed unnecessary include.

2013-05-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* INSTALL, CMakeLists.txt: Increase dependency to openvas-libraries
	from 6.0.0 to 7.0.0.

2013-05-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/attack.c (launch_plugin, attack_network): Remove handling of
	username which is not relevant anymore because we have only one user.
	(attack_user_name): Removed. It is not used anymore now.
